activities: fix not scrolling on overflow
This adds css needed to make the activities tab view contents scroll
appropriately when the contents don't fit vertically.

Fixes: https://github.com/pybricks/support/issues/782

--- a/src/settings/settings.scss
+++ b/src/settings/settings.scss
@@ -6,6 +6,8 @@
 @use '@blueprintjs/core/lib/scss/variables' as bp;
 
 .pb-settings {
+    overflow-y: auto;
+
     .#{bp.$ns}-control-group {
         .#{bp.$ns}-button {
             margin-bottom: 3px;
